maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if(somme==4 || -somme==4){avance()}
                                    ^