maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run(){

  def keepHandOnSideWall(): Boolean={
    var somme=0
    if(somme==4 || -somme==4){avance()}
    else{
    	droite()
      somme+=1
    	if(estFaceMur()){ 
      	gauche()
        somme-=1
      	return true}
    	else{
      	gauche()
      	return false}
    }
  }
  
  while(!estSurBiscuit()){
    if(keepHandOnSideWall()){
      if(!estFaceMur()){avance()}
      else{gauche()}
    }
    else{droite()
         avance()
        }
    
  }
  prendBiscuit()
}